# jipiewya

./: README.md
backend/: main.py
backend/app/: database.py
studportfolio/: README.md  render.yaml
studportfolio/backend/: pyproject.toml
studportfolio/backend/app/routes/: documents.py
studportfolio/frontend/: index.html
